Avoid overflow of too large images

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -1207,6 +1207,7 @@ ul.gn-resultview {
   background: white;
   padding-bottom: 3em;
   text-align: center;
+  max-width: calc(100% - 10em);
   img {
     max-height: 700px;
   }
